Criação do teste de portall-controll-by-partner
